# MAI-python-lab3

./: .pre-commit-config.yaml  README.md  pyproject.toml
leetcode/: 20_Valid_Parentheses.py  232_Implement_Queue_using_Stacks.py  509_Fibonacci_Number.py
practice/: 215_Kth_Largest_Element_in_an_Array.py  225_Implement_Stack_using_Queues.py  347_Top_K_Frequent_Elements.py  Counting_Sort_1.py  Counting_Sort_2.py  Counting_Sort_3.py  Hackerrank_QuickSort_1.py  LeetCode_70_Climbing Stair.py  LeetCode_70_Climbing_Stair.py  LeetCode_75_Sort_Colors.py
src/: benchmark.py  errors.py  factorial.py  fibo.py  generate_tests.py  main.py  sorts.py  stack.py  stack_commands.py  state.py
tests/: conftest.py  test_benchmark.py  test_factorial.py  test_fibo.py  test_generate_tests.py  test_sorts.py  test_stack.py  test_stack_commands.py
